# BAEMIN_Delivery_Challenge

./: .gitignore
cube_tracker/: CMakeLists.txt  package.xml  settings.json  tasks.json
cube_tracker/cfg/: SetClusterParam.cfg
cube_tracker/include/: DBSCAN_kdtree.h  DBSCAN_precomp.h  DBSCAN_simple.h  KalmanTracker.cpp  KalmanTracker.h  cluster.h  cube_tracker.h  utils.h
cube_tracker/launch/: cluster.launch  run_tracker.launch  tracker.launch
cube_tracker/msg/: Tracker.msg  TrackerArray.msg
cube_tracker/src/: cluster.cpp  cube_tracker.cpp  dbscan.cpp
delivery/: CMakeLists.txt  package.xml
delivery/config/: order.yaml
delivery/launch/: delivery.launch  publish_transform.launch  robot_control.launch
delivery/map/: 1_5_in_to_start.txt  1_5_in_you_init.txt  2_4_in_to_start.txt  2_4_in_you_init.txt  3_0_in_init_to_warp.txt  3_5_out_to_fin.txt  4_4_out_to_fin.txt  4_4_out_you_init.txt  5_0_out_warp_to_init.txt  5_2_in_to_start.txt  5_3_in_to_start.txt  5_3_in_you_init.txt  9999_3_out_to_fin copy.txt  result_1.txt
delivery/scripts/: control.py  costmap.py  dynamic_window_approach.py  map_recorder.py  robot_control.py
delivery/src/: delivery.py
delivery/utils/: add_yaw.py  dynamic_window_approach.py  get_map.py  transfrom_utm.py
local_pkg/: CMakeLists.txt  README.md  package.xml
local_pkg/include/local_pkg/: gps_imu.hpp
local_pkg/scripts/: gps_heading.py  gps_heading_vel.py  gps_velocity.py  heading_plot.py  kf_gps.py
local_pkg/src/: gps_imu.cpp
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/src/: detect.py  visualizer.py
object_detection/utils/: ros.py
orb_slam3/src/: Tracking.cc
orb_slam_ros/config/Monocular/: MORAI.yaml
orb_slam_ros/config/Monocular-Inertial/: MORAI.yaml
orb_slam_ros/launch/: MORAI_mono.launch  MORAI_mono_Inertial.launch
patchwork-plusplus-ros/: CMakeLists.txt
patchwork-plusplus-ros/config/: params.yaml  params_lidar.yaml
patchwork-plusplus-ros/include/patchworkpp/: point_cluster.hpp  point_crop.hpp
patchwork-plusplus-ros/launch/: patchwork.launch  patchworkpp.launch
patchwork-plusplus-ros/src/: patchworkpp.cpp  point_cluster.cpp  point_crop.cpp  scan_crop.cpp
src/: ros_mono.cc  ros_mono_inertial.cc
